--- a/css/styles.css
+++ b/css/styles.css
@@ -84,3 +84,11 @@ img {
         border-radius: 50%;
         background-size: cover;
 }
+
+footer {
+	justify-content: center;
+	font-family: sans-serif;
+	font-size: 1rem;
+	padding: 2rem;
+	font-weight: 100;
+}
